.config/waybar/style.css
@import url("./colors.css");

* {
  /* `otf-font-awesome` is required to be installed for icons */
  font-family: JetBrainsMono NFP, JetBrainsMonoNL Nerd Font Mono, JetBrainsMono Nerd Font, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
  color: @on_surface;
  font-size: 12px;
  border-radius: 15px;
}

window#waybar {
  margin: 10px 10px 0px 10px;
  background: transparent;
  box-shadow: none;
  /* background-color: rgba(0, 0, 0, 0.5); */
  /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
  color: #ffffff;
  /* transition-property: background-color; */
  /* transition-duration: .5s; */
}

window#waybar.hidden {
  opacity: 0.2;
}

/*
window#waybar.empty {
    background-color: transparent;
}
window#waybar.solo {
    background-color: #FFFFFF;
}
*/

window#waybar.termite {
  background-color: #3F3F3F;
}

window#waybar.chromium {
  background-color: #000000;
  border: none;
}

button {
  /* Use box-shadow instead of border so the text isn't offset */
  /* box-shadow: inset 0 -3px transparent; */
  /* Avoid rounded borders under each button name */
  border: none;
  border-radius: 0;
}

/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
button:hover {
  background: inherit;
  /* box-shadow: inset 0 -3px #ffffff; */
}

/* you can set a style on hover for any module like this */
/* #pulseaudio:hover { */
/* background-color: #a37800; */
/* } */

#workspaces {
  background-color: @secondary_container;
  border: 2px solid @primary;
  padding: 4px;
  border-radius: 100px;
  /* gaps: 4px; */
}

#workspaces button label {
  font-size: 8px;
  /* color: @tertiary; */
  /* transition: font-size 150ms ease-in-out, */
  /* color 150ms ease-in-out; */
}

#workspaces button {
  margin: 0 2px;
  min-width: 10px;
  min-height: 8px;
  padding: 0px 4px;
  background-color: transparent;
  color: #ffffff;
  border-radius: 100px;
  background-color: @surface_container_high;
  /* transform: scale(0.5); */
  transition: background-color 150ms ease-in-out,
    min-width 150ms ease-in-out;
}

/* #workspaces button:hover { */
/* background: @surface_container_highest; */
/* } */

#workspaces button.focused,
#workspaces button.active {
  /* font-size: 10px; */
  min-width: 30px;
  background-color: @secondary;
  /* max-height: 6px; */
  /* border-radius: 15px; */
  /* box-shadow: inset 0 -3px #ffffff; */
}

#workspaces button.active label {
  font-size: 13px;
  color: @surface_container;
}

#workspaces button.empty label {
  font-size: 12px;
  color: @on_surface;
}

/* #worspaces button.focused, #workspaces button */

#workspaces button.empty {
  min-width: 30px;
  min-height: 5px;
  background-color: @surface_container_highest;
  /* color: transparent; */
}

@keyframes blinkopacity {
  to {
    background-color: @tertiary_container;
    background-color: @surface_container_lowest;
  }
}

#workspaces button.urgent {
  background-color: @surface_container_highest;
  animation-name: blinkopacity;
  animation-duration: 500ms;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#window {
  padding: 0 10px;
  background-color: @secondary_container;
  border: 2px solid @primary;
  min-width: 50px;
  transition: min-width 150ms ease-in-out;
}

#mode {
  background-color: #64727D;
  /* box-shadow: inset 0 -3px #ffffff; */
}

#clock,
#battery,
#bluetooth,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#pulseaudio,
#wireplumber,
#custom-media,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#tlp-pd,
#custom-notification,
#custom-power,
#custom-dnd,
#mpd {
  padding: 0 10px;
  color: @on_surface;
}

#pulseaudio:hover,
#backlight:hover,
#network:hover,
#custom-notification:hover,
#bluetooth:hover,
#battery:hover,
#custom-dnd:hover,
#custom-media:hover,
#clock:hover

/* #custom-power:hover, */
  {
  background-color: @secondary;
  color: @surface_container;
  transition: background-color 150ms ease-in-out, color 150ms ease-in-out;
}

/* #pulseaudio:active, */
/* #backlight:active, */
/* #network:active, */
/* #bluetooth:active, */
/* #battery:active */
/* #custom-power:hover, */
/* { */
/* background-color: @secondary_container; */
/* color: @surface_container; */
/* transition: background-color 150ms ease-in-out, color 150ms ease-in-out; */
/* } */

#window {
  margin: 0 4px;
}

tooltip {
  color: @on_surface;
  background-color: @secondary_container;
  border-radius: 15px;
  border: 1px solid @primary;
}

#rightside,
#leftside {
  border: 2px solid @primary;
  border-radius: 999px;
  background-color: @secondary_container;
  padding: 4px;
  margin: 0 2px;
}

#networkbluetooth,
#audisplay,
#custom-notification,
#clock,
#custom-media {
  border-radius: 999px;
  background-color: @surface_container_highest;
  padding: 0 0px;
  margin: 0 2px;
}

#clock {
  padding: 0 10px;
}

/* If workspaces is the leftmost module, omit left margin */
.modules-left>widget:first-child>#workspaces {
  margin-left: 0;
}

/* If workspaces is the rightmost module, omit right margin */
.modules-right>widget:last-child>#workspaces {
  margin-right: 0;
}

#battery,
#custom-notification,
#custom-dnd,
#custom-media {
  padding: 0 10px;
  margin: 0 2px;
  background-color: @surface_container_highest;
}

@keyframes blink {
  to {
    background-color: #ffffff;
    color: #000000;
  }
}

/* Using steps() instead of linear as a timing function to limit cpu usage */
#battery.critical:not(.charging) {
  background-color: #f53c3c;
  color: #ffffff;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: steps(12);
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#tlp-pd {
  padding-right: 15px;
}

#tlp-pd.performance {
  background-color: #f53c3c;
  color: #ffffff;
}

#tlp-pd.balanced {
  background-color: #2980b9;
  color: #ffffff;
}

#tlp-pd.power-saver {
  background-color: #2ecc71;
  color: #000000;
}

label:focus {
  background-color: #000000;
}

#cpu {
  background-color: #2ecc71;
  color: #000000;
}

#memory {
  background-color: #9b59b6;
}

#disk {
  background-color: #964B00;
}

#wireplumber {
  background-color: #fff0f5;
  color: #000000;
}

#wireplumber.muted {
  background-color: #f53c3c;
}

#custom-power {
  margin: 0 2px;
  color: @surface_container_highest;
  background-color: @secondary;
  transition: background-color 150ms ease-in-out, color 150ms ease-in-out;
}

#custom-power:hover {
  color: inherit;
  background-color: @surface_container_highest;
}

#temperature {
  background-color: #f0932b;
}

#temperature.critical {
  background-color: #eb4d4b;
}

#tray {
  margin: 0 2px;
  background-color: @surface_container_highest;
}

#tray>.passive {
  -gtk-icon-effect: dim;
}

#tray>.needs-attention {
  -gtk-icon-effect: highlight;
  background-color: #eb4d4b;
}

#idle_inhibitor {
  background-color: #2d3436;
}

#idle_inhibitor.activated {
  background-color: #ecf0f1;
  color: #2d3436;
}

#mpd {
  background-color: #66cc99;
  color: #2a5c45;
}

#mpd.disconnected {
  background-color: #f53c3c;
}

#mpd.stopped {
  background-color: #90b1b1;
}

#mpd.paused {
  background-color: #51a37a;
}

#language {
  background: #00b093;
  color: #740864;
  padding: 0 5px;
  margin: 0 5px;
  min-width: 16px;
}

#keyboard-state {
  background: #97e1ad;
  color: #000000;
  padding: 0 0px;
  margin: 0 5px;
  min-width: 16px;
}

#keyboard-state>label {
  padding: 0 5px;
}

#keyboard-state>label.locked {
  background: rgba(0, 0, 0, 0.2);
}

#scratchpad {
  background: rgba(0, 0, 0, 0.2);
}

#scratchpad.empty {
  background-color: transparent;
}

#privacy {
  padding: 0;
}

#privacy-item {
  padding: 0 5px;
  color: white;
}

#privacy-item.screenshare {
  background-color: #cf5700;
}

#privacy-item.audio-in {
  background-color: #1ca000;
}

#privacy-item.audio-out {
  background-color: #0069d4;
}

